--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,6 @@
         android:dividerHeight="2dp"
         android:id="@+id/lauchs_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
     </ListView>
 </android.support.constraint.ConstraintLayout>
