--- a/app/src/main/res/layout/launch_item.xml
+++ b/app/src/main/res/layout/launch_item.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content">
         <FrameLayout
             android:id="@+id/image_container"
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="80dp">
         </FrameLayout>
         <TextView
